MA-15 Fix label layout issue in Edge

--- a/src/targets/meandall/styles/views/reservation.less
+++ b/src/targets/meandall/styles/views/reservation.less
@@ -1,4 +1,7 @@
 main.reservation-page {
+  .display-block {
+    display: block;
+  }
   background: @c-primary;
   color: @c-secondary;
   margin-bottom:0;
